[tool.poetry]
name = "fox_video_download"
version = "0.1.0"
description = "Disponibilizar um app para download de videos para fins educacionais"
authors = ["Geovanni"]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
yt-dlp = "^2025.6.9"

[tool.poetry.scripts]
start = "commands.start:main"
gui = "commands.start:start"

[[tool.poetry.packages]]
include = "fox_video_download"
from = "src"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.14.1"

